--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -90,6 +90,31 @@ p {
 .content {
   margin: 30px;
 }
+.logo {
+  max-height: 40px;
+}
+nav {
+  padding: 20px 0;
+}
+nav li {
+  display: inline;
+  list-style: none;
+  line-height: 42px;
+  margin-left: 15px;
+}
+nav ul {
+  padding: 0;
+  margin: 0;
+}
+nav a {
+  text-decoration: none;
+  color: #272142;
+  transition: all 100ms ease-in-out;
+}
+nav li.active a,
+nav a:hover {
+  color: var(--branding-color);
+}
 @media (max-width: 900px) {
   h1 {
     font-size: 44px;
@@ -109,5 +134,8 @@ p {
   .project-description {
     padding: 0;
     text-align: center;
+  }
+  nav a {
+    font-size: 12px;
   }
 }
