Making email address responsive

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -172,4 +172,7 @@ footer .social-links a:hover {
     padding: 0;
     text-align: center;
   }
+  footer .email-link {
+    font-size: 10px;
+  }
 }
